# ChangeLog for dev-python/pep8
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Oct 2010; James Rowe <jnrowe@gmail.com> -pep8-0.5.0.ebuild,
  pep8-0.6.1.ebuild:
  Keyworded x86.

  22 Oct 2010; James Rowe <jnrowe@gmail.com> pep8-0.6.1.ebuild:
  Keyworded amd64.

  08 Oct 2010; James Rowe <jnrowe@gmail.com> pep8-0.6.1.ebuild:
  Fixed module bytecode compilation.

  08 Oct 2010; James Rowe <jnrowe@gmail.com> -pep8-0.6.0.ebuild,
  +pep8-0.6.1.ebuild:
  Version bump [197]. Droped 0.6.0 due to upstream versioning problems.

  06 Oct 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Added remote-id to metadata.

  25 Sep 2010; James Rowe <jnrowe@gmail.com> pep8-0.6.0.ebuild:
  Updated homepage.

*pep8-0.6.0 (21 Sep 2010)

  21 Sep 2010; James Rowe <jnrowe@gmail.com> +pep8-0.6.0.ebuild:
  Version bump [#185].

  21 Mar 2010; James Rowe <jnrowe@gmail.com> pep8-0.5.0.ebuild:
  Added PYTHON_DEPEND setting.

  20 Mar 2010; James Rowe <jnrowe@gmail.com> -pep8-0.4.2.ebuild,
  pep8-0.5.0.ebuild:
  Keyworded x86.

  20 Mar 2010; James Rowe <jnrowe@gmail.com> pep8-0.5.0.ebuild:
  Keyworded amd64.

*pep8-0.5.0 (18 Feb 2010)

  18 Feb 2010; James Rowe <jnrowe@gmail.com> +pep8-0.5.0.ebuild:
  Version bump [cb0].

  22 Nov 2009; James Rowe <jnrowe@gmail.com> -pep8-0.3.1.ebuild,
  pep8-0.4.2.ebuild:
  Keyworded x86.

  22 Nov 2009; James Rowe <jnrowe@gmail.com> pep8-0.4.2.ebuild:
  Keyworded amd64.

  12 Nov 2009; James Rowe <jnrowe@gmail.com> pep8-0.3.1.ebuild,
  pep8-0.4.2.ebuild:
  Switched to EAPI 2.

*pep8-0.4.2 (23 Oct 2009)

  23 Oct 2009; James Rowe <jnrowe@gmail.com> +pep8-0.4.2.ebuild:
  Version bump [de0].

  22 Oct 2009; James Rowe <jnrowe@gmail.com> pep8-0.3.1.ebuild:
  Keyworded x86.

  18 Oct 2009; James Rowe <jnrowe@gmail.com> pep8-0.3.1.ebuild:
  Converted script to use module_script_wrapper.

  17 Oct 2009; James Rowe <jnrowe@gmail.com> pep8-0.3.1.ebuild:
  Keyworded amd64.
