@@ -2,13 +2,13 @@
 Hash: SHA1
 
 DIST pep8-0.6.1.tar.gz 21499 RMD160 9234bd7776ef09cc06c6f33350f1752d49ec2135 SHA1 206c9942ed79a527db1389052ac9dc272183e85d SHA256 c0654b683bd0c20987e3e767bb0241daf014d854cb89ec84fbed623e349faeec
-EBUILD pep8-0.6.1.ebuild 554 RMD160 5e48b6323720601c29216760d91cc7279401a3dd SHA1 82de3e8dcba3e1335af7867dbe1478d8a5783d3b SHA256 5f4009d800b93a033a60ef1a23346387c759f96912b49f4c8fd1de444beb928e
-MISC ChangeLog 2269 RMD160 451d3b80f34dfb1378bb17f6eec7c362d320ad48 SHA1 ac953f516f6f149c591c2e208a6f904779042193 SHA256 715220c8753ce5e78c80c8d7699a3ae54ebb3942950871b8dc7b1199b41c59ff
-MISC metadata.xml 761 RMD160 7873815071b9c906e8d9d8ea8a4af6561d4969f4 SHA1 d6b55d7426745a296b9d8c01ba4964364879e246 SHA256 d33b366cc46f80013988278163cf21d0712f236973a2206614c79cc8a9dbf0fb
+EBUILD pep8-0.6.1.ebuild 555 RMD160 ece7af0adf6c9c57fd9a0bd5c6cfcc688cd1ce33 SHA1 13b3896852b321c2eccc3f7dc9a3e301a9191351 SHA256 202f97ff2296b54ad022cbfa9ca7092912fe6a13d4fe7c07bea3e30f954b6c06
+MISC ChangeLog 2412 RMD160 a3cd9ba266913b50d97b0903631b41861a4643a5 SHA1 4f73877d9de5387ae47c091687caf26b60cf1e05 SHA256 e0d237dfc0c68c8f7c83e0138c6d282bba73e2ae4796ab2b6591005a45fb2725
+MISC metadata.xml 764 RMD160 06fc8088e792e272f33133929dfb07e8a807ec1e SHA1 cf3b53fab083f281c2e69623cecd1c60c6b3be96 SHA256 02649b4463fbb819dd6062aa7f3fe98871cf23a30685ba3cf3c716da8cc170db
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkzB5K8ACgkQzJrj3cAXR0kABgCfdyktfwZYBWwzXxfJK0KbB4wh
-KFoAoK6iVzeB5MxqbGtFMzxhTjh5Udu1
-=1VIT
+iEYEARECAAYFAkzXEtEACgkQzJrj3cAXR0nFHQCeOD0T6pTZDlFAyT4z+m5o++lv
+9ZoAn3MArFicplWb4y1viozY8XUCM9cD
+=zSoQ
 -----END PGP SIGNATURE-----
