@@ -12,9 +12,9 @@
 		output and small.
 	</longdescription>
 	<upstream>
-		<changelog>http://github.com/cburroughs/pep8.py/raw/master/CHANGES.txt</changelog>
-		<doc lang="en">http://github.com/cburroughs/pep8.py/raw/master/README.rst</doc>
+		<changelog>https://github.com/cburroughs/pep8.py/raw/master/CHANGES.txt</changelog>
+		<doc lang="en">https://github.com/cburroughs/pep8.py/raw/master/README.rst</doc>
 		<remote-id type="pypi">pep8</remote-id>
-		<bugs-to>http://github.com/cburroughs/pep8.py/issues</bugs-to>
+		<bugs-to>https://github.com/cburroughs/pep8.py/issues</bugs-to>
 	</upstream>
 </pkgmetadata>
