@@ -3,7 +3,7 @@ dev-python/setuptools >=app-admin/eselect-python-20091230 dev-lang/python
 0
 mirror://pypi/p/pep8/pep8-0.6.1.tar.gz
 
-http://github.com/jcrocholl/pep8
+https://github.com/jcrocholl/pep8
 MIT
 A tool to check your Python code against the conventions in PEP 8
 amd64 x86
