@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Nov 2010; James Rowe <jnrowe@gmail.com> pep8-0.6.1.ebuild,
+  metadata.xml:
+  Updated URL for GitHub's recent switch to HTTPS everywhere.
+
   22 Oct 2010; James Rowe <jnrowe@gmail.com> -pep8-0.5.0.ebuild,
   pep8-0.6.1.ebuild:
   Keyworded x86.
